--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
 
     <string name="matches_toolbar_label">Partidas</string>
     <string name="matches_tba_label">TBA</string>
+    <string name="matches_now_label">AGORA</string>
+    <string name="generic_error_label">Ops… ocorreu um erro. Tente novamente mais tarde.</string>
+    <string name="network_error_label">Ops… sem conexão com a internet 😢.\nTente novamente após retomar sua conexão.</string>
+    <string name="timeout_error_label">Tempo esgotado 😢.\nTente novamente mais tarde.</string>
 </resources>
