--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_splash_screen">SplashScreen</string>
 
     <string name="matches_toolbar_label">Partidas</string>
-    <string name="matches_tba_label">TBA</string>
+    <string name="matches_tba_label">A definir</string>
     <string name="matches_now_label">AGORA</string>
     <string name="matches_versus_label">VS</string>
     <string name="match_details_players_error_label">"Sem jogadores para exibir no time "</string>
